syntax = "proto3";
package placement.center.openraft;

service OpenRaftService {
  rpc vote(VoteRequest) returns(VoteReply){}

  rpc append(AppendRequest) returns(AppendReply){}

  rpc snapshot(SnapshotRequest) returns(SnapshotReply){} 

  rpc add_learner(AddLearnerRequest) returns(AddLearnerReply){}

  rpc change_membership(impl Into<ChangeMembers>) returns(ChangeMembershipReply){}
}

message VoteRequest{
    bytes value = 1;
}

message VoteReply{
    bytes value = 1;
}

message AppendRequest{
    bytes value = 1;
}

message AppendReply{
    bytes value = 1;
}

message SnapshotRequest{
    bytes value = 1;
}

message SnapshotReply{
    bytes value = 1;
}

message AddLearnerRequest{
    bytes value = 1;
}

message AddLearnerReply{
    bytes value = 1;
}

message ChangeMembershipRequest{
    bytes value = 1;
}

message ChangeMembershipReply{
    bytes value = 1;
}